--- a/utamihon.html
+++ b/utamihon.html
@@ -40,7 +40,7 @@ $(this).next(".body-content").toggle();});
 紅一葉<br/>
 悪ノ娘<br/>
 悪ノ召使<br/>
-明け星<br/>
+<a href="https://www.youtube.com/watch?v=lutbIuaDy6Y">明け星</a><br/>
 アザレアの亡霊<br/>
 アストロノーツ<br/>
 アスノヨゾラ哨戒班<br/>
@@ -49,7 +49,7 @@ $(this).next(".body-content").toggle();});
 <a href="https://www.youtube.com/watch?v=NXq7AteDMlc">アブソリュート</a><br/>
 <a href="https://www.youtube.com/watch?v=bZTzd3_VXwc">天ノ弱</a><br/>
 雨夢楼<br/>
-雨とペトラ<br/>
+<a href="https://www.youtube.com/watch?v=zcpRhjsxAnY">雨とペトラ</a><br/>
 アヤノの幸福理論<br/>
 アルビノ<br/>
 アンチビート<br/>
@@ -128,7 +128,7 @@ $(this).next(".body-content").toggle();});
 <a href="https://www.youtube.com/watch?v=w_G3Xa4DilBHo">覚醒</a><br/>
 カゲロウデイズ<br/>
 過食性：アイドル症候群<br/>
-<a href="https://soundcloud.com/pinksprinkle/kzfk">風に吹かれても</a><br/>
+<a href="https://soundcloud.com/not-sotomine/kazenifukaretemo">風に吹かれても</a><br/>
 風待ちハローワールド<br/>
 <a href="https://www.youtube.com/watch?v=-Dhi9A0_7KU">カナデトモスソラ</a><br/>
 花瓶に触れた<br/>
@@ -207,7 +207,7 @@ $(this).next(".body-content").toggle();});
 再教育<br/>
 サイハテ<br/>
 サイレント・アテンダンス<br/>
-<a href="https://soundcloud.com/pinksprinkle/silent-majority">サイレントマジョリティー</a><br/>
+<a href="https://soundcloud.com/not-sotomine/silent-majority">サイレントマジョリティー</a><br/>
 桜ノ雨<br/>
 サマータイムレコード<br/>
 さよならメモリーズ<br/>
@@ -223,7 +223,7 @@ siGrE<br/>
 ジッタードール<br/>
 <a href="https://www.youtube.com/watch?v=qw6YzTwu0SM">失敗作少女</a><br/>
 <a href="https://www.youtube.com/watch?v=weqdib6Qf5Q">シニカルナイトプラン</a><br/>
-死ぬにはいい日だった<br/>
+<a href="https://soundcloud.com/not-sotomine/hiyori">死ぬにはいい日だった</a><br/>
 <a href="https://www.youtube.com/watch?v=myDQ3u1kAUc">シネマ</a><br/>
 <a href="https://www.youtube.com/watch?v=oon9leWiUig">始発とカフカ</a><br/>
 <a href="https://www.youtube.com/watch?v=AUgwZJNA7vM">ジェヘナ</a><br/>
@@ -391,7 +391,7 @@ siGrE<br/>
 バレリーコ<br/>
 ハロ／ハワユ<br/>
 Hello､ 星を数えて<br/>
-パンこげこげになっちゃった<br/>
+<a href="https://www.youtube.com/watch?v=ahgTu3ql85k">パンこげこげになっちゃった</a><br/>
 パンダヒーロー<br/>
         <br/>
         <br/>
@@ -549,7 +549,7 @@ Mrs.Pumpkinの滑稽な夢<br/>
         <br/>
 <h3>ろ</h3><br/>
 <a href="https://www.youtube.com/watch?v=OF_GmQ4uTz4">ロウワー</a><br/>
-<a href="https://soundcloud.com/ramlirise/rolling-girl">ローリンガール</a><br/>
+<a href="https://soundcloud.com/not-sotomine/rolling-girl">ローリンガール</a><br/>
 ロキ<br/>
 六兆年と一夜物語<br/>
 <a href="https://www.youtube.com/watch?v=Pr_Kq83IzWM">炉心融解</a><br/>
@@ -571,7 +571,7 @@ Mrs.Pumpkinの滑稽な夢<br/>
 1/6 -out of the gravity-<br/>
 13's memory<br/>
 1925<br/>
-6900000000<br/>
+<a href="https://soundcloud.com/not-sotomine/6900000000a">6900000000</a><br/>
 8HIT<br/>
         <br/>
         <br/>
@@ -591,7 +591,7 @@ Beautiful World<br/>
 bitter<br/>
 <a href="https://www.youtube.com/watch?v=zkWOiAdjVlw">Blindness</a><br/>
 BREAK<br/>
-<a href="https://soundcloud.com/ramlirise/boku-boku">Boku-boku β</a><br/>
+<a href="https://soundcloud.com/not-sotomine/boku-boku">Boku-boku β</a><br/>
 <a href="https://www.youtube.com/watch?v=yNSGC2VbW38">Credens Justitiam</a><br/>
 <a href="https://www.youtube.com/watch?v=7GaX7jMtSyk">Colorful</a><br/>
 Colorful world<br/>
@@ -613,6 +613,7 @@ glow<br/>
 god knows…<br/>
 <a href="https://www.youtube.com/watch?v=6eK3CRuD50I">Hello, World!</a><br/>
 <a href="https://www.youtube.com/watch?v=G5ECa4URUQg">Henceforth</a><br/>
+<a href="https://soundcloud.com/not-sotomine/internet-overdose">Internet Overdose</a><br/>
 into the New World<br/>
 <a href="https://www.youtube.com/watch?v=vUvpzuYKY_g">Kaine: Salvation</a><br/>
 <a href="https://www.youtube.com/watch?v=cj5O3-4Dj5U">Kick Back</a><br/>
@@ -655,7 +656,7 @@ Snow Song Show<br/>
 soundless voice<br/>
 <a href="https://www.youtube.com/watch?v=NU0N4t9Y3rs">South North Story</a><br/>
 <a href="https://www.youtube.com/watch?v=t6-62YGV5cA">SPiCa</a><br/>
-<a href="https://soundcloud.com/pinksprinkle/still-for-your-love">Still for your love</a><br/>
+<a href="https://soundcloud.com/not-sotomine/still-for-your-love">Still for your love</a><br/>
 Sugar Sweet Nightmare<br/>
 Sweet Devil<br/>
 <a href="https://www.youtube.com/watch?v=uVsEIwo8I7U">Tell Your World</a><br/>
@@ -671,6 +672,7 @@ WAA!!<br/>
 WORLD'S END UMBRELLA<br/>
 <a href="https://www.youtube.com/watch?v=DaHnkN7a3yM">world.execute(me);</a><br/>
 World-line<br/>
+world.search(you);<br/>
 <a href="https://www.youtube.com/watch?v=9P97CpyhN6M">your℃</a><br/>
 <a href="https://www.youtube.com/watch?v=ZpNaXAnepNI">Your reality</a><br/>
     </div>
