--- a/utamihon.html
+++ b/utamihon.html
@@ -17,9 +17,31 @@ $(this).next(".body-content").toggle();});
     </head>
     <body style="font-family: monospace;">
 <div style="text-align: center">
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<h2>利用方法</h2><br/>
+当ページは外峯零の歌ライブラリーです。<br/>
+URLは音源化できているものですので、リンクを右クリック→「新しいタブで開く」でご自由に聴けます。<br/>
+歌枠の際知らない曲が来てもアレなので、配信中はこのリスト内の曲を申し込んでくださると幸いです。<br/>
+うろ覚え・応えられないはご愛嬌で……<br/>
+<br/>
+<h2>ご要望の際</h2>
+リクエストは常時受け付けております。<br/>
+このリストにない曲でも構いません、色々教えてください。<br/>
+勧めて頂いた曲は全て一通り聴いておりますので、<br/>
+練習してそのうちアップデートされるかもしれません。<br/>
+気長にお待ちくださいね。<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
             <h2 class="body-title">あ行</h2>
 <div class="body-content">
-    
 <h3>あ</h3><br/>
 アイアルの勘違い<br/>
 <a href="https://www.youtube.com/watch?v=2Vxw7qMMRrw">愛言葉Ⅱ</a><br/>
