--- a/utamihon.html
+++ b/utamihon.html
@@ -23,8 +23,8 @@ $(this).next(".body-content").toggle();});
 <br/>
 <br/>
 <h2>利用方法</h2><br/>
-当ページは外峯零の歌ライブラリーです。<br/>
-URLは音源化できているものですので、リンクを右クリック→「新しいタブで開く」でご自由に聴けます。<br/>
+当ページは<b>外峯零</b>の歌ライブラリーです。<br/>
+URLは既に音源化できているものですので、<span style="color: #e95464">リンクを右クリック→「新しいタブで開く」</span>でご自由に聴けます。<br/>
 歌枠の際知らない曲が来てもアレなので、配信中はこのリスト内の曲を申し込んでくださると幸いです。<br/>
 うろ覚え・応えられないはご愛嬌で……<br/>
 <br/>
