--- a/utamihon.html
+++ b/utamihon.html
@@ -541,7 +541,7 @@ Mrs.Pumpkinの滑稽な夢<br/>
         <br/>
 <h3>ら</h3><br/>
 ライアーダンス<br/>
-ラストダンス<br/>
+<a href="https://www.youtube.com/watch?v=khXN8gWqvko">ラストダンス</a><br/>
 <a href="https://www.youtube.com/watch?v=l6KCu7jdxYo">ラストリゾート</a><br/>
 <a href="https://www.youtube.com/watch?v=pLhgqgMt3iQ">ラプンツェル</a><br/>
         <br/>
