--- a/utamihon.html
+++ b/utamihon.html
@@ -146,6 +146,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
 <h3>か</h3><br/>
 廻廻奇譚<br/>
 快晴<br/>
+輝いた<br/>
 <a href="https://www.youtube.com/watch?v=w_VydXtnEfJVY">限りなく灰色へ</a><br/>
 <a href="https://www.youtube.com/watch?v=w_G3Xa4DilBHo">覚醒</a><br/>
 カゲロウデイズ<br/>
@@ -172,6 +173,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
 君色に染まる<br/>
 君が生きてなくてよかった<br/>
 <a href="https://www.youtube.com/watch?v=Hhzl5gdl4bw">きみも悪い人でよかった</a><br/>
+きゅうくらりん<br/>
 <a href="https://www.youtube.com/watch?v=PD26R3f-sa0">今日の日はさようなら</a><br/>
 <a href="https://www.youtube.com/watch?v=ZBtjXUJRMZw">キライ・キライ・ジガヒダイ！</a><br/>
         <br/>
@@ -622,6 +624,7 @@ Days<br/>
 <a href="https://www.youtube.com/watch?v=XYTa7ifza5A">daze</a><br/>
 dear<br/>
 Don't be long<br/>
+Dragonsong<br/>
 Drop Pop Candy<br/>
 ECHO<br/>
 ELECT<br/>
@@ -665,6 +668,7 @@ OTOMEROID<br/>
 <a href="https://www.youtube.com/watch?v=N4qqUPPouCs">Peaky Peaky</a><br/>
 <a href="https://www.youtube.com/watch?v=rR8jlvY9pS4">Pink Bitch Club</a><br/>
 <a href="https://www.youtube.com/watch?v=11NT-NvaNtk">pray</a><br/>
+Pray<br/>
 proof of life<br/>
 PUZZLE<br/>
 Q<br/>
