--- a/utamihon.html
+++ b/utamihon.html
@@ -173,7 +173,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
 君色に染まる<br/>
 君が生きてなくてよかった<br/>
 <a href="https://www.youtube.com/watch?v=Hhzl5gdl4bw">きみも悪い人でよかった</a><br/>
-きゅうくらりん<br/>
+<a href="https://www.youtube.com/watch?v=4iw3wuP7LAc">きゅうくらりん</a><br/>
 <a href="https://www.youtube.com/watch?v=PD26R3f-sa0">今日の日はさようなら</a><br/>
 <a href="https://www.youtube.com/watch?v=ZBtjXUJRMZw">キライ・キライ・ジガヒダイ！</a><br/>
         <br/>
