--- a/utamihon.html
+++ b/utamihon.html
@@ -374,6 +374,7 @@ siGrE<br/>
         <br/>
 <h3>に</h3><br/>
 <a href="https://www.youtube.com/watch?v=_s6JK-SBpWg">ニア</a><br/>
+ニセモノ注意報<br/>
 <a href="https://www.youtube.com/watch?v=qJK8pJ0iccI">二息歩行</a><br/>
 日本橋高架下R計画<br/>
 ニビョウカン<br/>
@@ -586,12 +587,14 @@ Mrs.Pumpkinの滑稽な夢<br/>
 ワールドイズマイン<br/>
 <a href="https://www.youtube.com/watch?v=HjNU_XF6a4w">忘れじの言の葉</a><br/>
 私たちは未来の花<br/>
+わたしは禁忌<br/>
         <br/>
         <br/>
     </div>
             <h2 class="body-title">数字・その他</h2>
 <div class="body-content">
 <h3>0〜</h3><br/>
+1000年生きてる<br/>
 1/6 -out of the gravity-<br/>
 13's memory<br/>
 1925<br/>
@@ -608,6 +611,7 @@ Mrs.Pumpkinの滑稽な夢<br/>
     </div>
             <h2 class="body-title">A〜</h2>
 <div class="body-content">
+ACUTE<br/>
 <a href="https://www.youtube.com/watch?v=Rv112hSlt30">alive</a><br/>
 Bad Apple!!<br/>
 balloon<br/>
@@ -674,6 +678,7 @@ PUZZLE<br/>
 Q<br/>
 <a href="https://www.youtube.com/watch?v=WpB4N4wpR5w">QUEEN</a><br/>
 <a href="https://www.youtube.com/watch?v=mZnDg4HsFRs">RAD DOGS</a><br/>
+ReAct<br/>
 <a href="https://www.youtube.com/watch?v=qqwGNEDKMQs">Ready Steady</a><br/>
 Revive<br/>
 <a href="https://www.youtube.com/watch?v=l-OOdpPIC0M">Sigh</a><br/>
