--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 <br>
 視力　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　左0.1　右N/A<br>
 身体の耐久性　　　　　　　　　　　　　　　　　　　　　　　　　36　　　 　 下位値<br>
+精神安定性　　　　　　　　　　　　　　　　　　　　　　　　 -30~91　　　　　　　<br>
+平均精神安定値　　　　　　　　　　　　　　　　　　　　　　　　62　　　　　　安定<br>
 回復速度　　　　　　　　　　　　　　　　　　　　　　　　　　　78　　　 　 上位値<br>
 <br>
 <br>
