--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <br>
 視力　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　左0.1　右N/A<br>
 身体の耐久性　　　　　　　　　　　　　　　　　　　　　　　　　36　　　 　 下位値<br>
-精神安定性　　　　　　　　　　　　　　　　　　　　　　　　 -30~91　　　　　　　<br>
+精神安定性　　　　　　　　　　　　　　　　　　　　　　　　　-30~91　　　　　広域<br>
 平均精神安定値　　　　　　　　　　　　　　　　　　　　　　　　62　　　　　　安定<br>
 回復速度　　　　　　　　　　　　　　　　　　　　　　　　　　　78　　　 　 上位値<br>
 <br>
@@ -73,7 +73,7 @@ _log_16<br>
 <br>
 <br>
 <br>
-====備考<br>
+・備考<br>
 <br>
 最終更新　　　　　　　　　　　　　　　　　　　　　　　　　　　　　 20██年2月29日<br>
 --------------------------------------------------------------------------------<br>
