--- a/utamihon.html
+++ b/utamihon.html
@@ -352,8 +352,8 @@ siGrE<br/>
 ドーナツホール<br/>
 透明エレジー<br/>
 毒々<br/>
-匿名M<br/>
-毒林檎<br/>
+<a href="https://www.youtube.com/watch?v=3Mq6FsF07z8">匿名N</a><br/>
+<a href="https://www.youtube.com/watch?v=kaUv8IMOdnU">毒林檎</a><br/>
 渡月橋〜君想ふ〜<br/>
 とても痛い痛がりたい<br/>
 トラッシュ・アンド・トラッシュ！<br/>
@@ -594,7 +594,7 @@ Mrs.Pumpkinの滑稽な夢<br/>
             <h2 class="body-title">数字・その他</h2>
 <div class="body-content">
 <h3>0〜</h3><br/>
-1000年生きてる<br/>
+<a href="https://soundcloud.com/not-sotomine/1000a">1000年生きてる</a><br/>
 1/6 -out of the gravity-<br/>
 13's memory<br/>
 1925<br/>
