--- a/utamihon.html
+++ b/utamihon.html
@@ -43,14 +43,14 @@ URLは既に音源化できているものですので、<span style="color: #e9
             <h2 class="body-title">あ行</h2>
 <div class="body-content">
 <h3>あ</h3><br/>
-アイアルの勘違い<br/>
-<a href="https://www.youtube.com/watch?v=2Vxw7qMMRrw">愛言葉Ⅱ</a><br/>
-<a href="https://www.youtube.com/watch?v=Fnw7LaOpEvY">愛されなくても君がいる</a><br/>
-<a href="https://www.youtube.com/watch?v=91SRD4NJqXs">靉靆</a><br/>
-<a href="https://www.youtube.com/watch?v=67To_mORD3I">アイディスマイル</a><br/>
-<a href="https://www.youtube.com/watch?v=dmnxSO5TXFI">アイデンティティ</a><br/>
-アイネクライネ<br/>
-<a href="https://www.youtube.com/watch?v=sTIH_ikTSK4">アイノマテリアル</a><br/>
+アイアルの勘違い<a href="#footnote-1">[1]<br/></a>
+<a href="https://www.youtube.com/watch?v=2Vxw7qMMRrw">愛言葉Ⅱ<a href="#footnote-2">[2]</a><br/></a>
+<a href="https://www.youtube.com/watch?v=Fnw7LaOpEvY">愛されなくても君がいる<a href="#footnote-3">[3]</a></a><br/>
+<a href="https://www.youtube.com/watch?v=91SRD4NJqXs">靉靆<a href="#footnote-4">[4]</a></a><br/>
+<a href="https://www.youtube.com/watch?v=67To_mORD3I">アイディスマイル<a href="#footnote-5">[5]</a></a><br/>
+<a href="https://www.youtube.com/watch?v=dmnxSO5TXFI">アイデンティティ<a href="#footnote-6">[6]</a></a><br/>
+アイネクライネ<a href="#footnote-7">[7]</a><br/>
+<a href="https://www.youtube.com/watch?v=sTIH_ikTSK4">アイノマテリアル</a><a href="#footnote-8">[8]</a><br/>
 <a href="https://www.youtube.com/watch?v=kqr0V8db3V4">愛迷エレジー</a><br/>
 <a href="https://www.youtube.com/watch?v=bb56iYUFskw">アイラ</a><br/>
 愛を伝えたいだとか<br/>
@@ -81,8 +81,21 @@ URLは既に音源化できているものですので、<span style="color: #e9
 <a href="https://www.youtube.com/watch?v=1WiljMQf250">アンノウン・マザーグース</a><br/>
 <a href="https://www.youtube.com/watch?v=FzDdcX9Jacg">アンハッピーリフレイン</a><br/>
 アンヘル<br/>
-        <br/>
-        <br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<p id="footnote-1">[1]煮ル果実 feat. v flower</p><br/>
+<p id="footnote-2">[2] DECO*27 feat. 初音ミク</p><br/>
+<p id="footnote-3">[3] ピノキオピー feat. 初音ミク</p><br/>
+<p id="footnote-4">[4] canone feat. さとうささら</p><br/>
+<p id="footnote-5">[5] とあ feat. 初音ミク・鏡音リン</p><br/>
+<p id="footnote-6">[6] Kanaria feat. GUMI・初音ミク</p><br/>
+<p id="footnote-7">[7] 米津玄師</p><br/>
+<p id="footnote-8">[8] Junky feat. 初音ミク・鏡音リン</p><br/>
+<br/>
+<br/>
+<br/>
 <h3>い</h3><br/>
 いーあるふぁんくらぶ<br/>
 いいや<br/>
