--- a/utamihon.html
+++ b/utamihon.html
@@ -525,6 +525,7 @@ Mrs.Pumpkinの滑稽な夢<br/>
 妄想税<br/>
 <a href="https://www.youtube.com/watch?v=MlVcWUGpFqQ">モスクワを擁して</a><br/>
 モザイクロール<br/>
+<a href="https://www.youtube.com/watch?v=tUc0Hz9TH8U">モザイクロール(reloaded)</a><br/>
         <br/>
         <br/>
     </div>
