--- a/utamihon.html
+++ b/utamihon.html
@@ -443,6 +443,7 @@ Hello､ 星を数えて<br/>
 ヒビカセ<br/>
 秘蜜～黒の誓い～<br/>
 <a href="https://www.youtube.com/watch?v=l1UI18Z2_kI">ヒューマノイド</a><br/>
+<a href="https://www.youtube.com/watch?v=Ll258PESqJc">病名は愛だった</a><br/>
         <br/>
         <br/>
 <h3>ふ</h3><br/>
