--- a/utamihon.html
+++ b/utamihon.html
@@ -440,7 +440,7 @@ Hello､ 星を数えて<br/>
 ヒッチコック<br/>
 <a href="https://www.youtube.com/watch?v=9wTAdirmPGA">独りんぼエンヴィー</a><br/>
 <a href="https://www.youtube.com/watch?v=wGvCsnbq6Og">ヒバナ</a><br/>
-ヒビカセ<br/>
+<a href="https://www.youtube.com/watch?v=pUeHrk4tegg">ヒビカセ</a><br/>
 秘蜜～黒の誓い～<br/>
 <a href="https://www.youtube.com/watch?v=l1UI18Z2_kI">ヒューマノイド</a><br/>
 <a href="https://www.youtube.com/watch?v=Ll258PESqJc">病名は愛だった</a><br/>
@@ -613,6 +613,7 @@ Mrs.Pumpkinの滑稽な夢<br/>
 1/6 -out of the gravity-<br/>
 13's memory<br/>
 1925<br/>
+49懺悔録<br/>
 <a href="https://soundcloud.com/not-sotomine/6900000000a">6900000000</a><br/>
 8HIT<br/>
         <br/>
