--- a/utamihon.html
+++ b/utamihon.html
@@ -331,7 +331,7 @@ siGrE<br/>
 脱法ロック<br/>
 ダブルラリアット<br/>
 魂のルフラン<br/>
-玉袋を蚊に刺された<br/>
+<a href="https://www.youtube.com/watch?v=exs025pM_B4">玉袋を蚊に刺された</a><br/>
 <a href="https://www.youtube.com/watch?v=poYweW0IlsI">だれかの心臓になれたなら</a><br/>
 ダンスロボットダンス<br/>
         <br/>
@@ -478,7 +478,7 @@ Hello､ 星を数えて<br/>
 ホシトハナ<br/>
 <a href="https://www.youtube.com/watch?v=3VBLb2B-g_U">星を渡る鳥</a><br/>
 <a href="https://www.youtube.com/watch?v=rkPTySupvCg">ボッカデラベリタ</a><br/>
-ぽっぴっぽー<br/>
+<a href="https://www.youtube.com/watch?v=W0JftGc1jMk">ぽっぴっぽー</a><br/>
 <a href="https://www.youtube.com/watch?v=sx64xsvWmDs">炎</a><br/>
 ホモをください<br/>
 <a href="https://www.youtube.com/watch?v=QLmVeMc8r6E">ホワイトハッピー</a><br/>
