--- a/utamihon.html
+++ b/utamihon.html
@@ -603,6 +603,7 @@ Mrs.Pumpkinの滑稽な夢<br/>
 <a href="https://www.youtube.com/watch?v=HjNU_XF6a4w">忘れじの言の葉</a><br/>
 私たちは未来の花<br/>
 わたしは禁忌<br/>
+<a href="https://www.youtube.com/watch?v=QRuAV3XSZV0">私は、私達は</a><br/>
         <br/>
         <br/>
     </div>
@@ -636,6 +637,7 @@ bitter<br/>
 <a href="https://www.youtube.com/watch?v=zkWOiAdjVlw">Blindness</a><br/>
 BREAK<br/>
 <a href="https://soundcloud.com/not-sotomine/boku-boku">Boku-boku β</a><br/>
+<a href="https://www.youtube.com/watch?v=hIbflJrEQPA">Catchy!?</a><br/>
 <a href="https://www.youtube.com/watch?v=yNSGC2VbW38">Credens Justitiam</a><br/>
 <a href="https://www.youtube.com/watch?v=7GaX7jMtSyk">Colorful</a><br/>
 Colorful world<br/>
