--- a/utamihon.html
+++ b/utamihon.html
@@ -322,7 +322,7 @@ siGrE<br/>
 タイムマシン<br/>
 太陽系デスコ<br/>
 <a href="https://www.youtube.com/watch?v=U9MHov_ViTo">ダウナーウィッチ</a><br/>
-だから僕は音楽をやめた<br/>
+<a href="https://www.youtube.com/watch?v=_gYKDnSZ7lY">だから僕は音楽をやめた</a><br/>
 ただ君に晴れ<br/>
 <a href="https://www.youtube.com/watch?v=GMWhdf2Xv7E">正しくなれない</a><br/>
 ダダダダ天使<br/>
