--- a/utamihon.html
+++ b/utamihon.html
@@ -547,6 +547,7 @@ Mrs.Pumpkinの滑稽な夢<br/>
 <h3>よ</h3><br/>
 <br/>
 夜明けと蛍<br/>
+<a href="https://www.youtube.com/watch?v=9_1dkbzysS8">酔いどれ知らず</a><br/>
 <a href="https://www.youtube.com/watch?v=WDf0idwv7N4">よくばり</a><br/>
 吉原ラメント<br/>
 夜咄ディセイブ<br/>
