--- a/notice404.html
+++ b/notice404.html
@@ -85,7 +85,7 @@
 <br>
 お報せすべき事項は総計７つございます。一つでも抜けているか増えている場合、<br>
 若しくは、読めなくなっている場合、<br>
-必ず近くの係員に伝えるようお願い申し上げます。
+必ず近くの係員に伝えるようお願い申し上げます。<br>
 その後係員の案内に従い、3階の閼ｳ逾樒ｵ悟科の検査（無料）をお受けください。<br>
 縺ゅ＞縺､縺ｯ螟ｧ莠九↑繝｢繝弱°繧牙･ｪ縺｣縺ｦ縺?￥<br>
 <br>
