--- a/utamihon.html
+++ b/utamihon.html
@@ -46,6 +46,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
 アイアルの勘違い<a href="#footnote-1">[1]<br/></a>
 <a href="https://www.youtube.com/watch?v=2Vxw7qMMRrw">愛言葉Ⅱ<a href="#footnote-2">[2]</a><br/></a>
 <a href="https://www.youtube.com/watch?v=Fnw7LaOpEvY">愛されなくても君がいる<a href="#footnote-3">[3]</a></a><br/>
+愛してるばんざーい!<br/>
 <a href="https://www.youtube.com/watch?v=91SRD4NJqXs">靉靆<a href="#footnote-4">[4]</a></a><br/>
 <a href="https://www.youtube.com/watch?v=67To_mORD3I">アイディスマイル<a href="#footnote-5">[5]</a></a><br/>
 <a href="https://www.youtube.com/watch?v=dmnxSO5TXFI">アイデンティティ<a href="#footnote-6">[6]</a></a><br/>
@@ -175,6 +176,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
 カムパネルラ<br/>
 からくりピエロ<br/>
 ガラクタ姫とアポストロフ<br/>
+硝子の花園<br/>
 <a href="https://www.youtube.com/watch?v=ua7X7FW0Gy8">からっぽのまにまに</a><br/>
 ガランド<br/>
 カワキヲアメク<br/>
@@ -183,6 +185,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
         <br/>
 <h3>き</h3><br/>
 <a href="https://www.youtube.com/watch?v=fsvn23FF3J0">如月アテンション</a><br/>
+きっと青春が聞こえる<br/>
 君色に染まる<br/>
 君が生きてなくてよかった<br/>
 <a href="https://www.youtube.com/watch?v=Hhzl5gdl4bw">きみも悪い人でよかった</a><br/>
@@ -381,8 +384,10 @@ siGrE<br/>
 謎<br/>
 ナゾカケ<br/>
 ナゾトキ<br/>
+夏色えがおで1,2,Jump!<br/>
 夏に去りし君を想フ<br/>
 <a href="https://www.youtube.com/watch?v=3V3RIBkXxJo">ナンセンスの塊</a><br/>
+なんでもないや<br/>
         <br/>
         <br/>
 <h3>に</h3><br/>
@@ -456,6 +461,7 @@ Hello､ 星を数えて<br/>
 <a href="https://www.youtube.com/watch?v=M3rpz-HKb04">フラジール</a><br/>
 ブラック★ロックシューター<br/>
 ブリキノダンス<br/>
+ぶる~べりぃ♥とれいん<br/>
 <a href="https://www.youtube.com/watch?v=qIeS_rMoQH4">ブレス・ユア・ブレス</a><br/>
 <a href="https://www.youtube.com/watch?v=eGDBowXlGsA">プロトディスコ</a><br/>
 <a href="https://www.youtube.com/watch?v=1z4YNtDljDs">フロムトーキョー</a><br/>
@@ -474,6 +480,7 @@ Hello､ 星を数えて<br/>
 ほうき星<br/>
 ぼうけんのしょがきえました！<br/>
 <a href="https://soundcloud.com/ramlirise/boku-boku">Boku-boku β</a><br/>
+僕たちはひとつの光<br/>
 <a href="https://www.youtube.com/watch?v=EFKLIBTqvL4">ぼくらの16bit戦争</a><br/>
 ホシトハナ<br/>
 <a href="https://www.youtube.com/watch?v=3VBLb2B-g_U">星を渡る鳥</a><br/>
@@ -538,9 +545,11 @@ Mrs.Pumpkinの滑稽な夢<br/>
         <br/>
         <br/>
 <h3>ゆ</h3><br/>
+勇気のReason<br/>
 夕景イエスタデイ<br/>
 <a href="https://www.youtube.com/watch?v=J4as-TqBlk0">幽霊東京</a><br/>
 指切り<br/>
+夢なき夢は夢じゃない<br/>
 ゆるふわ樹海ガール<br/>
         <br/>
         <br/>
@@ -631,8 +640,10 @@ Mrs.Pumpkinの滑稽な夢<br/>
 <div class="body-content">
 ACUTE<br/>
 <a href="https://www.youtube.com/watch?v=Rv112hSlt30">alive</a><br/>
+Angelic Angel<br/>
 Bad Apple!!<br/>
 balloon<br/>
+Beat Eater<br/>
 Beautiful World<br/>
 bitter<br/>
 <a href="https://www.youtube.com/watch?v=zkWOiAdjVlw">Blindness</a><br/>
@@ -643,6 +654,7 @@ BREAK<br/>
 <a href="https://www.youtube.com/watch?v=7GaX7jMtSyk">Colorful</a><br/>
 <a href="https://www.youtube.com/watch?v=P5kQuVmrhaM">Colorful world</a><br/>
 <a href="https://www.youtube.com/watch?v=XUpeuSCGA_s">Color of drops</a><br/>
+Cutie Panther<br/>
 Days<br/>
 <a href="https://www.youtube.com/watch?v=XYTa7ifza5A">daze</a><br/>
 dear<br/>
@@ -675,11 +687,13 @@ Leia<br/>
 Lemon<br/>
 LUVORATORRRRRY!<br/>
 magnet<br/>
-Moment Ring<br/>
+MOMENT RING<br/>
 moonlit bear<br/>
+Music S.T.A.R.T!!<br/>
 My will<br/>
 <a href="https://www.youtube.com/watch?v=HNfmHhAfaAU">needLe</a><br/>
 <a href="https://www.youtube.com/watch?v=zOz9rYfcbUI">Nine Point Eight</a><br/>
+No brand girls<br/>
 No Logic<br/>
 <a href="https://www.youtube.com/watch?v=139xrvw0_0Q">No title</a><br/>
 Oath Sign<br/>
@@ -702,12 +716,15 @@ ReAct<br/>
 Revive<br/>
 <a href="https://www.youtube.com/watch?v=l-OOdpPIC0M">Sigh</a><br/>
 <a href="https://www.youtube.com/watch?v=nufuUevM1lY">Sissy sky</a><br/>
+Snow halation<br/>
 Snow Song Show<br/>
 soundless voice<br/>
 <a href="https://www.youtube.com/watch?v=NU0N4t9Y3rs">South North Story</a><br/>
 <a href="https://www.youtube.com/watch?v=t6-62YGV5cA">SPiCa</a><br/>
+START:DASH!!<br/>
 <a href="https://soundcloud.com/not-sotomine/still-for-your-love">Still for your love</a><br/>
 Sugar Sweet Nightmare<br/>
+SUNNY DAY SONG<br/>
 Sweet Devil<br/>
 <a href="https://www.youtube.com/watch?v=uVsEIwo8I7U">Tell Your World</a><br/>
 TRUTH<br/>
@@ -719,6 +736,7 @@ vivi<br/>
 WAA!!<br/>
 <a href="https://www.youtube.com/watch?v=fbS9lvy2Ixo">WAVE</a><br/>
 <a href="https://www.youtube.com/watch?v=C-ELTXquvMY">weight of the world</a><br/>
+Wonderful Rush<br/>
 WORLD'S END UMBRELLA<br/>
 <a href="https://www.youtube.com/watch?v=DaHnkN7a3yM">world.execute(me);</a><br/>
 World-line<br/>
