--- a/index-en.html
+++ b/index-en.html
@@ -6,10 +6,10 @@
 ================================================================================<br>
 OBSERVATION REPORT                                             February 10, 2023<br>
 ================================================================================<br>
-<br>           
-<br>
+                                                                                <br>           
+                                                                                <br>
 ・INFO<br>
-<br>
+                                                                                <br>
 Model No.                                                                    005<br>
 Name                                                                  Null Gaine<br>
 DOB                                                                   10/02/████<br>
@@ -23,38 +23,38 @@ Cessation of Vital Activity                                                   21
 --------------------------------------------------------------------------------<br>
 DIAGNOSIS                                      Protection required, Watchful eye<br>
 --------------------------------------------------------------------------------<br>
-<br>
-<br>
-<br>
+                                                                                <br>
+                                                                                <br>
+                                                                                <br>
 ・current situation<br>
 <br>
 Visual acuity                                            Left 0.1      Right N/A<br>
-Physical endurance　　　　　　　　　　　　　　　　　　　　　　　     　36     　　　Lower<br>
+Physical endurance　　　　　　　　　　　　　　　　　　　　　　　 　36     　　　Lower<br>
 Mental stability                                           -30~91      Wide Area<br>
 Average mental stability                                       62         Stable<br>
 Recovery speed                                                 78         Higher<br>
-<br>
-<br>
-<br>
+                                                                                <br>
+                                                                                <br>
+                                                                                <br>
 ・Cessation of Vital Activity<br>
-<br>
+                                                                                <br>
 PRE LOG FILE VANISHED;                                             CAUSE UNKNOWN<br>
-<br>
+                                                                                <br>
 ¥RESTART.\COUNT.bin<br>
 FROM 1913-03-23<br>
-<br>
-<br>
+                                                                                <br>
+                                                                                <br>
 _log_16<br>
 ████-09-23 04:08:27 ETHERWARE_ PERSONALITY COLLAPSED<br>
 ████-09-23 04:40:03 RUN_RECOVERY_FAILED<br>
 ████-09-23 04:41:22 RUN_RECOVERY_FAILED<br>
 ████-09-23 04:43:54 RUN_RECOVERY_FAILED<br>
 ████-09-23 08:21:56 PERSONALITY RECONSTRUCTED<br>
-<br>
-<br>
-<br>
+                                                                                <br>
+                                                                                <br>
+                                                                                <br>
 ・Observation results<br>
-<br>
+                                                                                <br>
 Absolute axis (time)                                               N/A    Normal<br>
 Absolute axis (coordinates)                                        N/A    Normal<br>
 Absolute axis (base dimension)                                     N/A    Normal<br>
@@ -62,9 +62,9 @@ Physical matter                                                    N/A    Normal
 Internal matter                                                    N/A    Normal<br>
 Return point                                                              Normal<br>
 Trends of model no.006                                                    Normal<br>
-<br>
-<br>
-<br>
+                                                                                <br>
+                                                                                <br>
+                                                                                <br>
 Last Updated                                                   February 29, 20██<br>
 --------------------------------------------------------------------------------<br>
 Null is the only successful example, but it did not become a thing that can live<br>
@@ -88,17 +88,19 @@ What they are looking for is just a little bit of connection.<br>
 But Null's existence is too fragile to be treated as a human being now, <br>
 and it has already taken shape to be treated as a conception-being as it is.<br>
 --------------------------------------------------------------------------------<br>
-<br>
-<br>
-<br>
+                                                                                <br>
+                                                                                <br>
+                                                                                <br>
 --------------------------------------------------------------------------------<br>
 All model numbers except 005 and 006 are for disposal.<br>
 --------------------------------------------------------------------------------<br>
-<br>
-<br>
-<br>
-<br>
+                                                                                <br>
+                                                                                <br>
+                                                                                <br>
+                                                                                <br>
 END OF REPORT<br>
 ================================================================================<br>
      CU 1000, N/A City General Hospital, Shireiji 2-1-1, Enuei-shi, Urushiya-ken<br>
 ================================================================================<br>
+	</body>
+</html>
