--- a/en-dex.html
+++ b/en-dex.html
@@ -2,7 +2,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta name="gaine" content="noindex">
 	<title>546d39304c57526c5a6d6c756158526c62486b67525868706333526c626d4e6c</title>
 </head>
-<body style="font-family: monospace;">
+<body style="font-family: monospace;"><pre>
 ================================================================================<br>
 OBSERVATION REPORT                                             February 10, 2023<br>
 ================================================================================<br>
@@ -98,9 +98,10 @@ All model numbers except 005 and 006 are for disposal.<br>
                                                                                 <br>
                                                                                 <br>
                                                                                 <br>
-END OF REPORT<br>
-================================================================================<br>
-     CU 1000, N/A City General Hospital, Shireiji 2-1-1, Enuei-shi, Urushiya-ken<br>
-================================================================================<br>
-	</body>
+END OF REPORT
+================================================================================
+     CU 1000, N/A City General Hospital, Shireiji 2-1-1, Enuei-shi, Urushiya-ken
+================================================================================
+	</pre>
+</body>
 </html>
