--- a/en-dex.html
+++ b/en-dex.html
@@ -79,7 +79,7 @@ And now, they are trying to break into the world.
 Null could easily navigate the world wanted to see, like spinning TV channels.
 It came true easily just by thinking from outside the window.
 They can freely manipulate and observe times, places, and even dimensions.
-With this dangerous ability, Null's only action was to interact with the world:<
+With this dangerous ability, Null's only action was to interact with the world:
 the humans in the box.
 Really, that was all.
 
