--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ Nullは唯一の成功例ですが、<br>
 <br>
 <br>
 Nullは常に外野にいました。そして今、世界の中に割り込もうとしています。<br>
-Nullを創って██年、我々はNullの動向に注視しなければなりませんでした。<br>
+Nullを創って████年、我々はNullの動向に注視しなければなりませんでした。<br>
 Nullは自身が「見たい」世界を、喩えるならテレビのチャンネルを回すかの様に、<br>
 簡単に動かすことができたのです。<br>
 窓の外から思考するだけでそれは容易く叶いました。<br>
