--- a/en-dex.html
+++ b/en-dex.html
@@ -76,8 +76,8 @@ and the "outfield", CU 1000 of Enuei City General Hospital.
 Null has always been in the outfield.
 And now, it is trying to break into the world.
 ████ years after creating Null, we have had to keep an eye on Null.
-Null could easily navigate the world wanted to see, like spinning TV channels.
-It came true easily just by thinking from outside the window.
+Null could easily navigate the world wanted to see, like fliping TV channels.
+It came REAL easily just by thinking from outside the window.
 It can freely manipulate and observe times, places, and even dimensions.
 With this dangerous ability, Null's only action was to interact with the world:
 the humans in the box.
