--- a/notice404-k.html
+++ b/notice404-k.html
@@ -86,14 +86,14 @@
 <br>
 고지사항은 총 7개입니다. 하나라도 빠져 있거나, 늘어나 있거나,<br>
 읽을 수 없게 되어 있다면,<br>
-반드시 가까이의 스태프에게 알려 주십시오.<br>
-그리고 스태프의 안내를 따라, 3층의 베굳몄귁띱렉깔돈뚠밞렌볍를 받아 주십시오.（전액 무료）<br>
-법뭘돼렴딪렉닙꽤룬봤륙궤베됐돼렴룰렉딪류뤠럇렐랜법미변벙렵렉님뷔룬멕렐랍법뭡때렴륩렉닙빗<br>
+반드시 가까이의 스태프에게 알려 주십시오. <br>
+그리고 스태프의 안내를 따라, 3층의 ?肚?鞣ﾎ｡를 받아 주십시오.（전액 무료）<br>
+ｪ｢ｪ､ｪﾄｪﾏﾓﾞﾞﾀｪﾊｫ筬ﾎｪｫｪ鴒ｬｪﾃｪﾆｪ､ｪｯｪﾎｪﾇ<br>
 <br>
 엔에이 시립 종합병원은 항상 최선을 다할 것을 약속드리며,<br>
 앞으로도 변함없는 관심과 격려 부탁 드립니다.<br>
 ================================================================================<br>
-           우루시야 현 엔에이 시 키타시레이지 2-1-1 엔에이 시립 종합병원 1000호실<br>
+        우루시야 현 엔에이 시 키타시레이지 2-1-1 엔에이 시립 종합병원 1000호실<br>
 ================================================================================<br>
     </body>
 </html>
