--- a/notice404.html
+++ b/notice404.html
@@ -92,7 +92,7 @@
 ご協力誠に有難うございました。<br>
 今後とも何卒宜しくお願い致します。<br>
 ================================================================================<br>
-　　　　　　　　　　　　 漆谷県江縫栄市北司零寺2-1-1　江縫栄市立総合病院1000号室<br>
+<a href="https://hospinfo-enuei-city.org/notice404-k">KO</a>　　　　　　　　　　　 漆谷県江縫栄市北司零寺2-1-1　江縫栄市立総合病院1000号室<br>
 ================================================================================<br>
     </body>
 </html>
