--- a/utamihon.html
+++ b/utamihon.html
@@ -123,6 +123,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
 歌に形はないけれど<br/>
 有頂天ビバーチェ<br/>
 <a href="https://www.youtube.com/watch?v=Tthr0i9px4o">うまれるまえは</a><br/>
+<a href="https://www.youtube.com/watch?v=TlePGnrDEQg">海のまにまに</a><br/>
 <a href="https://www.youtube.com/watch?v=OWOBj9gRA90">ウミユリ海底譚</a><br/>
 <a href="https://www.youtube.com/watch?v=nDacwIe8z-o">嬉しい、楽しい、幸せカーニバル。</a><br/>
         <br/>
@@ -210,6 +211,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
 <a href="https://www.youtube.com/watch?v=uNFQSwhTzQ4">グリッチヒーロー</a><br/>
 <a href="https://www.youtube.com/watch?v=yZQiCCfgL6w">クレイ</a><br/>
 紅蓮花<br/>
+<a href="https://www.youtube.com/watch?v=PcgeX44ZZck">群青</a><br/>
 <a href="https://www.youtube.com/watch?v=4nLMABak2To">群青讃歌</a><br/>
 群青レイン<br/>
         <br/>
@@ -250,6 +252,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
 <a href="https://soundcloud.com/not-sotomine/silent-majority">サイレントマジョリティー</a><br/>
 桜ノ雨<br/>
 サマータイムレコード<br/>
+<a href="https://www.youtube.com/watch?v=9Fj4Z4ITexI">ザムザ</a><br/>
 さよならメモリーズ<br/>
 サリシノハラ<br/>
 <a href="https://www.youtube.com/watch?v=eJj0PdgoY98">ザルバラ</a><br/>
