--- a/utamihon.html
+++ b/utamihon.html
@@ -58,7 +58,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
 アウターサイエンス<br/>
 阿吽のビーツ<br/>
 <a href="https://www.youtube.com/watch?v=SoCvwmfVstU">蒼</a><br/>
-青く青く光る<br/>
+<a href="https://www.youtube.com/watch?v=gwSrJ7KnNqs">青く青く光る</a><br/>
 アカツキアライヴァル<br/>
 紅一葉<br/>
 悪ノ娘<br/>
