--- a/utamihon.html
+++ b/utamihon.html
@@ -104,7 +104,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
 いかないで<br/>
 異国人形館殺人事件<br/>
 イドラのサーカス<br/>
-言って。<br/>
+<a href="https://www.youtube.com/watch?v=PFn2XDkra7I">言って。</a><br/>
 命に嫌われている<br/>
 いのちの名前<br/>
 命のユースティティア<br/>
@@ -528,7 +528,7 @@ Mrs.Pumpkinの滑稽な夢<br/>
 メランコリック<br/>
 <a href="https://www.youtube.com/watch?v=0EC4MJjhoic">メリュー</a><br/>
 メルティランドナイトメア<br/>
-メルト<br/>
+<a href="https://www.youtube.com/watch?v=rUa8R75JD3U">メルト</a><br/>
         <br/>
         <br/>
 <h3>も</h3><br/>
