--- a/utamihon.html
+++ b/utamihon.html
@@ -84,19 +84,6 @@ URLは既に音源化できているものですので、<span style="color: #e9
 アンヘル<br/>
 <br/>
 <br/>
-<br/>
-<br/>
-<p id="footnote-1">[1]煮ル果実 feat. v flower</p><br/>
-<p id="footnote-2">[2] DECO*27 feat. 初音ミク</p><br/>
-<p id="footnote-3">[3] ピノキオピー feat. 初音ミク</p><br/>
-<p id="footnote-4">[4] canone feat. さとうささら</p><br/>
-<p id="footnote-5">[5] とあ feat. 初音ミク・鏡音リン</p><br/>
-<p id="footnote-6">[6] Kanaria feat. GUMI・初音ミク</p><br/>
-<p id="footnote-7">[7] 米津玄師</p><br/>
-<p id="footnote-8">[8] Junky feat. 初音ミク・鏡音リン</p><br/>
-<br/>
-<br/>
-<br/>
 <h3>い</h3><br/>
 いーあるふぁんくらぶ<br/>
 いいや<br/>
@@ -748,7 +735,22 @@ World-line<br/>
 world.search(you);<br/>
 <a href="https://www.youtube.com/watch?v=9P97CpyhN6M">your℃</a><br/>
 <a href="https://www.youtube.com/watch?v=ZpNaXAnepNI">Your reality</a><br/>
+            <br/>
+        <br/>
     </div>
+            <h2 class="body-title">Footnote</h2>
+<div class="body-content">
+<p id="footnote-1">[1]煮ル果実 feat. v flower</p><br/>
+<p id="footnote-2">[2] DECO*27 feat. 初音ミク</p><br/>
+<p id="footnote-3">[3] ピノキオピー feat. 初音ミク</p><br/>
+<p id="footnote-4">[4] canone feat. さとうささら</p><br/>
+<p id="footnote-5">[5] とあ feat. 初音ミク・鏡音リン</p><br/>
+<p id="footnote-6">[6] Kanaria feat. GUMI・初音ミク</p><br/>
+<p id="footnote-7">[7] 米津玄師</p><br/>
+<p id="footnote-8">[8] Junky feat. 初音ミク・鏡音リン</p><br/>
+        <br/>
+        <br/>
+</div>
       </div>
         <br/>
         <br/>
