--- a/utamihon.html
+++ b/utamihon.html
@@ -261,7 +261,7 @@ siGrE<br/>
 <a href="https://www.youtube.com/watch?v=f6zTFKEyWxk">シャルル</a><br/>
 ジャンキーナイトタウンオーケストラ<br/>
 ジャバヲッキー・ジャバヲッカ<br/>
-<a href="https://https://soundcloud.com/nullificated005/sugasong">シュガーソングとビターステップ<br/>
+<a href="https://soundcloud.com/nullificated005/sugasong">シュガーソングとビターステップ<br/>
 純愛レンズ<br/>
 上弦の月<br/>
 <a href="https://www.youtube.com/watch?v=DdoKw_wg1nM">少女ふぜゐ</a><br/>
