--- a/utamihon.html
+++ b/utamihon.html
@@ -444,6 +444,7 @@ Hello､ 星を数えて<br/>
         <br/>
         <br/>
 <h3>ふ</h3><br/>
+<a href="https://www.youtube.com/watch?v=PPCx2mSxKlw">フィクションブルー</a><br/>
 ファティマ<br/>
 <a href="https://www.youtube.com/watch?v=gRHO14O3ZY4">フォニイ</a><br/>
 双色<br/>
