--- a/en-dex.html
+++ b/en-dex.html
@@ -105,7 +105,7 @@ All model numbers except 005 and 006 are for disposal.
                                                                                 
 END OF REPORT
 ================================================================================
-     CU 1000, N/A City General Hospital, Shireiji 2-1-1, Enuei-shi, Urushiya-ken
+CU 1000, N/A City General Hospital, kita-Shireiji 2-1-1, Enuei-shi, Urushiya-ken
 ================================================================================
 	</pre>
 </body>
