--- a/utamihon.html
+++ b/utamihon.html
@@ -45,6 +45,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
 <h3>あ</h3><br/>
 アイアルの勘違い<a href="#footnote-1">[1]<br/></a>
 <a href="https://www.youtube.com/watch?v=2Vxw7qMMRrw">愛言葉Ⅱ<a href="#footnote-2">[2]</a><br/></a>
+<a href="https://www.youtube.com/watch?v=uiN5bmMlE0s">愛言葉Ⅲ<br/></a>
 <a href="https://www.youtube.com/watch?v=Fnw7LaOpEvY">愛されなくても君がいる<a href="#footnote-3">[3]</a></a><br/>
 愛してるばんざーい!<br/>
 <a href="https://www.youtube.com/watch?v=91SRD4NJqXs">靉靆<a href="#footnote-4">[4]</a></a><br/>
@@ -159,7 +160,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
 花瓶に触れた<br/>
 竈門炭治郎のうた<br/>
 カミイロアワセ<br/>
-神の名前に堕ちる者<br/>
+<a href="https://www.youtube.com/watch?v=lWdWrjJ-xTY">神の名前に堕ちる者</a><br/>
 神のまにまに<br/>
 カムパネルラ<br/>
 からくりピエロ<br/>
@@ -243,6 +244,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
 さよならメモリーズ<br/>
 サリシノハラ<br/>
 <a href="https://www.youtube.com/watch?v=eJj0PdgoY98">ザルバラ</a><br/>
+<a href="https://www.youtube.com/watch?v=fAtVRV91X0U">残響散歌</a><br/>
 残酷な天使のテーゼ<br/>
         <br/>
         <br/>
