--- a/utamihon.html
+++ b/utamihon.html
@@ -308,6 +308,7 @@ siGrE<br/>
 相愛性理論<br/>
 <a href="https://www.youtube.com/watch?v=vfljO3qjiNo">相対の門</a><br/>
 <a href="https://www.youtube.com/watch?v=WZhkjaPvJXY">それがあなたの幸せとしても</a><br/>
+<a href="https://www.youtube.com/watch?v=GeynpjEz8To">ゾンビ</a><br/>
         <br/>
         <br/>
     </div>
@@ -352,7 +353,7 @@ siGrE<br/>
 デビルじゃないもん<br/>
 <a href="https://www.youtube.com/watch?v=VosdCKZStlM">てらてら</a><br/>
 テロル<br/>
-天樂<br/>
+<a href="https://www.youtube.com/watch?v=bh7egL__fTc">天樂</a><br/>
 <a href="https://www.youtube.com/watch?v=_WViWidQhDM">天使のクローバー</a><br/>
         <br/>
         <br/>
