--- a/utamihon.html
+++ b/utamihon.html
@@ -43,16 +43,17 @@ URLは既に音源化できているものですので、<span style="color: #e9
             <h2 class="body-title">あ行</h2>
 <div class="body-content">
 <h3>あ</h3><br/>
-アイアルの勘違い<a href="#footnote-1">[1]<br/></a>
-<a href="https://www.youtube.com/watch?v=2Vxw7qMMRrw">愛言葉Ⅱ<a href="#footnote-2">[2]</a><br/></a>
+アイアルの勘違い<br/>
+<a href="https://www.youtube.com/watch?v=2Vxw7qMMRrw">愛言葉Ⅱ<br/></a>
 <a href="https://www.youtube.com/watch?v=uiN5bmMlE0s">愛言葉Ⅲ<br/></a>
-<a href="https://www.youtube.com/watch?v=Fnw7LaOpEvY">愛されなくても君がいる<a href="#footnote-3">[3]</a></a><br/>
+<a href="https://www.youtube.com/watch?v=Fnw7LaOpEvY">愛されなくても君がいる</a><br/>
 愛してるばんざーい!<br/>
-<a href="https://www.youtube.com/watch?v=91SRD4NJqXs">靉靆<a href="#footnote-4">[4]</a></a><br/>
-<a href="https://www.youtube.com/watch?v=67To_mORD3I">アイディスマイル<a href="#footnote-5">[5]</a></a><br/>
-<a href="https://www.youtube.com/watch?v=dmnxSO5TXFI">アイデンティティ<a href="#footnote-6">[6]</a></a><br/>
-アイネクライネ<a href="#footnote-7">[7]</a><br/>
-<a href="https://www.youtube.com/watch?v=sTIH_ikTSK4">アイノマテリアル</a><a href="#footnote-8">[8]</a><br/>
+<a href="https://www.youtube.com/watch?v=91SRD4NJqXs">靉靆</a><br/>
+<a href="https://www.youtube.com/watch?v=67To_mORD3I">アイディスマイル</a><br/>
+<a href="https://www.youtube.com/watch?v=dmnxSO5TXFI">アイデンティティ</a><br/>
+<a href="https://www.youtube.com/watch?v=oNklN1EdeVU">アイドル</a>・<a href="https://www.youtube.com/watch?v=2dNEWm2K_Rs">Idol</a><br/>
+アイネクライネ<br/>
+<a href="https://www.youtube.com/watch?v=sTIH_ikTSK4">アイノマテリアル</a><br/>
 <a href="https://www.youtube.com/watch?v=kqr0V8db3V4">愛迷エレジー</a><br/>
 <a href="https://www.youtube.com/watch?v=bb56iYUFskw">アイラ</a><br/>
 愛を伝えたいだとか<br/>
@@ -199,7 +200,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
 <a href="https://www.youtube.com/watch?v=uNFQSwhTzQ4">グリッチヒーロー</a><br/>
 <a href="https://www.youtube.com/watch?v=yZQiCCfgL6w">クレイ</a><br/>
 紅蓮花<br/>
-<a href="https://www.youtube.com/watch?v=PcgeX44ZZck">群青</a><br/>
+<a href="https://www.youtube.com/watch?v=PcgeX44ZZck">群青</a>・<a href="https://www.youtube.com/watch?v=0l2MLLVs_N0">Blue</a><br/>
 <a href="https://www.youtube.com/watch?v=4nLMABak2To">群青讃歌</a><br/>
 群青レイン<br/>
         <br/>
@@ -362,6 +363,7 @@ siGrE<br/>
 東京テディベア<br/>
 ドーナツホール<br/>
 透明エレジー<br/>
+<a href="https://www.youtube.com/watch?v=ZkcbQYXC6Ng">ド屑</a><br/>
 毒々<br/>
 <a href="https://www.youtube.com/watch?v=3Mq6FsF07z8">匿名N</a><br/>
 <a href="https://www.youtube.com/watch?v=kaUv8IMOdnU">毒林檎</a><br/>
@@ -559,7 +561,7 @@ Mrs.Pumpkinの滑稽な夢<br/>
 <a href="https://www.youtube.com/watch?v=YP3yYQZ-VlQ">ヨヒラ</a><br/>
 <a href="https://www.youtube.com/watch?v=whF9yEhsyq8">黄泉桜</a><br/>
 <a href="https://www.youtube.com/watch?v=fQsoiH_UdLM">夜と幽霊</a><br/>
-<a href="https://www.youtube.com/watch?v=rkmDu4XZvFs">夜に駆ける</a><br/>
+<a href="https://www.youtube.com/watch?v=rkmDu4XZvFs">夜に駆ける</a>・<a href="https://www.youtube.com/watch?v=ExC6cvUJ5EM">Into the Night</a><br/>
 弱虫モンブラン<br/>
         <br/>
         <br/>
@@ -712,6 +714,7 @@ ReAct<br/>
 Revive<br/>
 <a href="https://www.youtube.com/watch?v=l-OOdpPIC0M">Sigh</a><br/>
 <a href="https://www.youtube.com/watch?v=nufuUevM1lY">Sissy sky</a><br/>
+<a href="https://www.youtube.com/watch?v=giBHIkpEDVc">snooze</a><br/>
 Snow halation<br/>
 Snow Song Show<br/>
 soundless voice<br/>
@@ -742,19 +745,6 @@ world.search(you);<br/>
             <br/>
         <br/>
     </div>
-            <h2 class="body-title">Footnote</h2>
-<div class="body-content">
-<p id="footnote-1">[1]煮ル果実 feat. v flower</p><br/>
-<p id="footnote-2">[2] DECO*27 feat. 初音ミク</p><br/>
-<p id="footnote-3">[3] ピノキオピー feat. 初音ミク</p><br/>
-<p id="footnote-4">[4] canone feat. さとうささら</p><br/>
-<p id="footnote-5">[5] とあ feat. 初音ミク・鏡音リン</p><br/>
-<p id="footnote-6">[6] Kanaria feat. GUMI・初音ミク</p><br/>
-<p id="footnote-7">[7] 米津玄師</p><br/>
-<p id="footnote-8">[8] Junky feat. 初音ミク・鏡音リン</p><br/>
-        <br/>
-        <br/>
-</div>
       </div>
         <br/>
         <br/>
