--- a/internallink.html
+++ b/internallink.html
@@ -7,7 +7,8 @@
 内部リンク集<br>
 ================================================================================<br>
 <a href="https://hospinfo-enuei-city.org/">豎溽ｸｫ譬?ｸらｫ狗ｷ丞粋逞?劼1000蜿ｷ螳､</a><br>
-<a href="https://hospinfo-enuei-city.org/en-dex">豎溽ｸｫ譬?ｸらｫ狗ｷ丞粋逞?劼1000蜿ｷ螳､【英語】</a><br>
+<a href="https://hospinfo-enuei-city.org/en-dex">546d39304c57526c5a6d6c756158526c62486b67525868706333526c626d4e6c【英語】</a><br>
+<a href="https://hospinfo-enuei-city.org/ko-dex">Ti9BIO2VtOuLuSDsl4bsnYw【韓国語】</a><br>
 <br>
 <a href="https://hospinfo-enuei-city.org/utamihon">歌見本</a><br>
 <br>
