--- a/utamihon.html
+++ b/utamihon.html
@@ -457,6 +457,7 @@ Hello､ 星を数えて<br/>
 プライド革命<br/>
 <a href="https://www.youtube.com/watch?v=-qLkN88ey9A">ブラインド</a><br/>
 <a href="https://www.youtube.com/watch?v=M3rpz-HKb04">フラジール</a><br/>
+<a href="https://www.youtube.com/watch?v=e0n1S2bh-Rw">プラスティック・ラブ</a><br/>
 ブラック★ロックシューター<br/>
 ブリキノダンス<br/>
 ぶる~べりぃ♥とれいん<br/>
