--- a/utamihon.html
+++ b/utamihon.html
@@ -176,6 +176,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
 <h3>き</h3><br/>
 <a href="https://www.youtube.com/watch?v=fsvn23FF3J0">如月アテンション</a><br/>
 きっと青春が聞こえる<br/>
+キティ<br/>
 君色に染まる<br/>
 君が生きてなくてよかった<br/>
 <a href="https://www.youtube.com/watch?v=Hhzl5gdl4bw">きみも悪い人でよかった</a><br/>
@@ -226,6 +227,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
 コネクト<br/>
 コノハの世界事情<br/>
 このピアノでお前を8759632145回ぶん殴る<br/>
+このふざけた素晴らしき世界は、僕の為にある<br/>
 <a href="https://www.youtube.com/watch?v=SB6eEhLmAZY">ごまかし</a><br/>
 今宵は彼奴めを拐かし、いざ麗しき闇を燃やさん。<br/>
         <br/>
