--- a/utamihon.html
+++ b/utamihon.html
@@ -176,7 +176,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
 <h3>き</h3><br/>
 <a href="https://www.youtube.com/watch?v=fsvn23FF3J0">如月アテンション</a><br/>
 きっと青春が聞こえる<br/>
-キティ<br/>
+<a href="https://www.youtube.com/watch?v=pQqp3-eLW88">キティ</a><br/>
 君色に染まる<br/>
 君が生きてなくてよかった<br/>
 <a href="https://www.youtube.com/watch?v=Hhzl5gdl4bw">きみも悪い人でよかった</a><br/>
