--- a/utamihon.html
+++ b/utamihon.html
@@ -429,6 +429,7 @@ siGrE<br/>
 <a href="https://www.youtube.com/watch?v=Szqxd-yyWug">花に風</a><br/>
 <a href="https://www.youtube.com/watch?v=ZUxp4e3DBHI">パノプティコン</a><br/>
 パプリカ<br/>
+<a href="https://www.youtube.com/watch?v=jWjHE8K3nUc">バベル</a><br/>
 <a href="https://www.youtube.com/watch?v=rIxg-mGWmq0">霽れを待つ</a><br/>
 バレリーコ<br/>
 ハロ／ハワユ<br/>
@@ -535,6 +536,7 @@ Mrs.Pumpkinの滑稽な夢<br/>
 <a href="https://www.youtube.com/watch?v=MlVcWUGpFqQ">モスクワを擁して</a><br/>
 モザイクロール<br/>
 <a href="https://www.youtube.com/watch?v=tUc0Hz9TH8U">モザイクロール(reloaded)</a><br/>
+<a href="https://www.youtube.com/watch?v=ZCkrfi0gywc">ももいろの鍵</a><br/>
         <br/>
         <br/>
     </div>
@@ -650,6 +652,7 @@ bitter<br/>
 <a href="https://www.youtube.com/watch?v=zkWOiAdjVlw">Blindness</a><br/>
 BREAK<br/>
 <a href="https://soundcloud.com/not-sotomine/boku-boku">Boku-boku β</a><br/>
+<a href="https://www.youtube.com/watch?v=XvicMJZ2e88">Calc.</a><br/>
 <a href="https://www.youtube.com/watch?v=hIbflJrEQPA">Catchy!?</a><br/>
 <a href="https://www.youtube.com/watch?v=yNSGC2VbW38">Credens Justitiam</a><br/>
 <a href="https://www.youtube.com/watch?v=7GaX7jMtSyk">Colorful</a><br/>
