--- a/nullatelier.html
+++ b/nullatelier.html
@@ -13,10 +13,10 @@ $(".body-content").hide();
 $(".body-title").on("click", function(){
 $(this).next(".body-content").toggle();});
 });
+$(".contents p") {word-wrap: break-word;}
       </script>
     </head>
     <body style="font-family: monospace;">
-        .contents p {word-wrap: break-word;}
 <div style="text-align: left">
 <br/>
 <br/>
